# NPB-sync

./: .gitignore  CMakeLists.txt  active_promise.cpp  active_promise.tpp  avg.awk  avg_a_with_b.awk  config.ini  config_generator.py  defines.h  functions.cpp  functions.h  generate_dynamic_defines.py  increase.cpp  increase.h  launch_test.sh  measure-time.h  parse_results.py  parse_results.sh  parse_results_to_csv.sh  promise_plus.cpp  promise_plus.h  sync.cpp  utils.cpp  utils.h
cmake/: FindLua.cmake  Findspdlog.cmake
latex/: formulas.tex
scripts/: README.md  config_generator.py  generate_dynamic_defines.py  generate_matrices.py  generate_simulation_data.py  graph.py  kernel_base.py  launch_test.py  launch_test.sh  launch_tests.py  normalize.py  parse_iterations_results.py  parse_results.py  parse_results.sh  parse_results_to_csv.sh  run_parser.py  run_processor.py  run_simulations.py  setup_repo.py  simulation_data.py  synchronizers.py
src/: CMakeLists.txt  active_promise.cpp  active_promise.h  argv.cpp  argv.h  core.h  defines.cpp  defines.h  dynamic_config.cpp  dynamic_config.h  fifo.h  fifo_plus.h  fifo_plus.tpp  functions.cpp  functions.h  generator_core.cpp  generator_core.h  increase.cpp  increase.h  logging.cpp  logging.h  lu.cpp  lu.h  matrix_core.cpp  matrix_core.h  matrix_generator.cpp  naive_promise.h  naive_queue.hpp  naive_queue.tpp  naive_queue_conf.h  naive_queue_conf.h.template  promise_plus.cpp  promise_plus.h  promise_plus.tpp  smart_fifo.h  static_step_promise_plus.h  sync.cpp  time_log.h  tss.h  utils.cpp  (+2 more)
src/dedup/: CMakeLists.txt  binheap.cpp  decoder.cpp  dedup.c  dedup.cpp  dedupdef.h  encode_common.cpp  encode_common.h  encode_default.cpp  encode_fifo.cpp  encode_naive_queue.cpp  encode_naive_queue.cpp.all_optims  encode_naive_queue.cpp.compress_cross  encode_naive_queue.cpp.dedup_to_compress  encode_naive_queue.cpp.dedup_to_reorder  encode_naive_queue.cpp.no_optims  encode_naive_queue.cpp.only_dedup  encode_naive_queue.cpp.template  encode_naive_queue_conf.h  encode_naive_queue_conf.h.template  encode_smart.cpp  encoder.c  encoder.cpp  encoder.h  hard_steps.h.template  hashtable.cpp  hashtable.h  lua_core.cpp  lua_core.h  mbuffer.cpp  queue.c  queue.cpp  queue.h  script_mgr.c  script_mgr.cpp  script_mgr.h  step.c  step.cpp  step.h  tree.cpp  (+3 more)
src/dedup/openssl/: md32_common.h  sha_locl.h
src/dedup/steps/: step.cpp.template  step_first_try.c  step_initial.cpp
src/functions/: heat_cpu.cpp  lu.cpp  lu.h
src/heat_cpu/: CMakeLists.txt  defines.h  heat_cpu.cpp  heat_cpu.h  main.cpp  matrix_core.cpp  matrix_core.h  matrix_generator.cpp
src/lu/: CMakeLists.txt  defines.h  lu.cpp  lu.h  lu.tpp  main.cpp  matrix_core.cpp  matrix_core.h  matrix_generator.cpp
src/promises/: dynamic_step_promise.h  naive_promise.cpp  naive_promise.h  static_step_promise.h
src/promises/dynamic_step_promise/: dynamic_step_promise.tpp
src/promises/naive_promise/: naive_promise.cpp  naive_promise.tpp
src/promises/static_step_promise/: static_step_promise.cpp  static_step_promise.tpp
src/tests/: CMakeLists.txt  test_dynamic_step.cpp  test_fifo_plus.cpp  test_fifo_plus.h  test_naive_queue.cpp
src/tests/fifo_plus/: CMakeLists.txt  fifo_plus_spsc.cpp
src/tests/smart_fifo/: CMakeLists.txt  smart_fifo.cpp
src/tests/smart_fifo/benchs/: CMakeLists.txt  no_pipeline.cpp  pipeline.cpp
